sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value lgr
  lgr = getnombreValeurs()
  ^AlgInsertionSort:8: error: not found: value lgr
  for (i <- 1 to lgr-1){
                 ^AlgInsertionSort:9: error: not found: value stockeur
    stockeur = getValeur(i)
    ^AlgInsertionSort:18: error: not found: value stockeur
    setValeur(i-a, stockeur)
                   ^